@@ -1,6 +1,6 @@
 This directory is new to KDE1.0.
 
-It was neccesary to add the kcheckpass to the KDE1.0 tree
+It was necessary to add the kcheckpass to the KDE1.0 tree
 due to some reported possible security exploits.
 
 If this breaks compilation or running of KDE for you,
