@@ -20,15 +20,30 @@
  * This is the authentication code if you use PAM
  * Ugly, but proven to work.
  *****************************************************************/
+#include <stdlib.h>
 #include <string.h>
+
+extern "C" {
 #include <security/pam_appl.h>
-#include <security/pam_misc.h>
+}
+
+#ifdef KDE_PAM_SERVICE
+#define KDE_PAM KDE_PAM_SERVICE
+#else
+#define KDE_PAM "xdm"  /* default PAM service used by kcheckpass */
+#endif
 
 static const char *PAM_username;
 static const char *PAM_password;
 
+#ifdef PAM_MESSAGE_NONCONST
+typedef struct pam_message pam_message_type;
+#else
+typedef const struct pam_message pam_message_type;
+#endif
+
 static int
-PAM_conv (int num_msg, const struct pam_message **msg,
+PAM_conv (int num_msg, pam_message_type **msg,
 	  struct pam_response **resp,
 	  void *appdata_ptr)
 {
@@ -37,7 +52,7 @@ PAM_conv (int num_msg, const struct pam_message **msg,
   int             size = sizeof(struct pam_response);
 
 #define GET_MEM \
-	if (!(repl = realloc(repl, size))) \
+	if (!(repl = static_cast<pam_response*>(realloc(repl, size)))) \
   		return PAM_CONV_ERR; \
 	size += sizeof(struct pam_response)
 #define COPY_STRING(s) (s) ? strdup(s) : NULL
@@ -64,7 +79,7 @@ PAM_conv (int num_msg, const struct pam_message **msg,
     default:
       /* Must be an error of some sort... */
       message("unexpected error from PAM: %s\n",
-	      msg[count]->msg);
+	     msg[count]->msg);
       free(repl);
       return PAM_CONV_ERR;
     }
@@ -88,7 +103,7 @@ int authenticate(const char *login, const char *passwd)
   PAM_username = login;
   PAM_password = passwd;
 
-  pam_error = pam_start("kcheckpass", login, &PAM_conversation, &pamh);
+  pam_error = pam_start(KDE_PAM, login, &PAM_conversation, &pamh);
   if (pam_error != PAM_SUCCESS
       || (pam_error = pam_authenticate(pamh, 0)) != PAM_SUCCESS) {
     pam_end(pamh, pam_error);
